<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColor">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/nHeaderContainer"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:background="@drawable/header_movie_list"
                tools:ignore="MissingConstraints">

            <android.support.constraint.ConstraintLayout
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/nArrowLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_left"
                        app:layout_constraintTop_toTopOf="@id/nMovieText"
                        app:layout_constraintBottom_toBottomOf="@id/nMovieText"
                />

                <TextView
                        android:id="@+id/nMovieText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_movie"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:layout_marginStart="20sp"
                        android:gravity="center"
                        android:fontFamily="@font/helvetica_neue_bold"
                        android:layout_gravity="center"
                        app:layout_constraintLeft_toRightOf="@id/nArrowLeft"

                />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
                android:id="@+id/nMovieDetailsContainer"
                android:background="@drawable/search_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="80dp"
        >

            <TextView
                    style="@style/TitleAddMovie"
                    android:id="@+id/nMovieDetails"
                    android:text="@string/movie_details"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    style="@style/TitleDetails"
                    android:id="@+id/nOriginalTitle"
                    android:text="@string/details_title1"
                    app:layout_constraintTop_toBottomOf="@id/nMovieDetails"/>

            <EditText
                    style="@style/EditTextDetails"
                    android:id="@+id/nETOriginal"
                    app:layout_constraintTop_toBottomOf="@id/nOriginalTitle"
                    android:layout_marginTop="6dp"
                    android:lines="2"/>

            <TextView
                    style="@style/TitleDetails"

                    android:id="@+id/nMovieOverview"
                    android:text="@string/details_title2"
                    app:layout_constraintTop_toBottomOf="@id/nETOriginal"/>

            <EditText
                    style="@style/EditTextDetails"
                    android:id="@+id/nETOverview"
                    app:layout_constraintTop_toBottomOf="@id/nMovieOverview"
                    android:lines="5"/>

            <TextView
                    style="@style/TitleDetails"
                    android:id="@+id/nIMDBId"
                    android:text="@string/details_title3"
                    app:layout_constraintTop_toBottomOf="@id/nETOverview"/>

            <EditText
                    style="@style/EditTextDetails"
                    android:id="@+id/nETImdb"
                    app:layout_constraintTop_toBottomOf="@id/nIMDBId"
                    android:lines="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="18dp"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
                android:background="@drawable/search_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="24dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                app:layout_constraintTop_toBottomOf="@id/nMovieDetailsContainer">

            <TextView
                    style="@style/TitleAddMovie"
                    android:id="@+id/nMoviePoster"
                    android:text="@string/movie_poster"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                    android:id="@+id/nAddFileIcon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:layout_constraintTop_toBottomOf="@id/nMoviePoster"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_addfile"
            />

            <TextView
                    android:id="@+id/nAddFileInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/add_file_info"
                    app:layout_constraintTop_toBottomOf="@id/nAddFileIcon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:gravity="center"
                    android:textColor="@color/subtitleTextColor"
                    android:layout_marginTop="14sp"
                    android:layout_marginStart="76dp"
                    android:layout_marginEnd="76dp"
                    android:fontFamily="@font/helvetica_neue"
                    android:textAlignment="center"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#22D889"
                    android:textSize="16sp"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:text="@string/select_files"
                    app:layout_constraintTop_toBottomOf="@id/nAddFileInfo"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="20dp"
            />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
                android:background="@drawable/button_add_movie"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                tools:ignore="MissingConstraints"
                app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/add_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"/>
        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

</layout>