<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColor">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/nHeaderContainer"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:background="@drawable/header_movie_list"
                tools:ignore="MissingConstraints">

            <android.support.constraint.ConstraintLayout
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/nArrowLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_left"
                        app:layout_constraintTop_toTopOf="@id/nMovieText"
                        app:layout_constraintBottom_toBottomOf="@id/nMovieText"
                />

                <TextView
                        android:id="@+id/nMovieText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movies"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:layout_marginStart="20sp"
                        android:gravity="center"
                        android:fontFamily="@font/helvetica_neue_bold"
                        android:layout_gravity="center"
                        app:layout_constraintLeft_toRightOf="@id/nArrowLeft"

                />

                <ImageView
                        android:id="@+id/nOptioBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_option_bar_settings"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintRight_toRightOf="parent"/>

                <ImageView
                        app:layout_constraintRight_toLeftOf="@id/nOptioBar"
                        android:layout_marginEnd="28dp"
                        android:id="@+id/nBell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_notification_bell"/>


                <RelativeLayout
                        app:layout_constraintBottom_toBottomOf="@id/nArrowLeft"
                        app:layout_constraintLeft_toLeftOf="@id/nBell"
                        android:layout_marginStart="10dp"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:background="@drawable/circle_bk">
                    <TextView
                            android:id="@+id/nTextNotification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/helvetica_neue_bold"
                            android:text="4"
                            android:textColor="#373737"
                            android:textSize="8sp"/>
                </RelativeLayout>
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/nSearchBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:background="@drawable/search_bg"
                android:layout_height="48dp"
                app:layout_constraintBottom_toBottomOf="@id/nHeaderContainer"
                app:layout_constraintTop_toBottomOf="@id/nHeaderContainer"
                tools:ignore="MissingConstraints">

            <TextView
                    android:id="@+id/nFilters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters"
                    android:textSize="14dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:fontFamily="@font/helvetica_neue_bold"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/green"
                    android:layout_marginStart="7dp"
            />

            <ImageView
                    android:id="@+id/nFiltersIcon"
                    app:layout_constraintEnd_toStartOf="@id/nFilters"
                    android:layout_marginEnd="7dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_filter"
            />

            <View
                    android:id="@+id/nDevider"
                    app:layout_constraintEnd_toStartOf="@id/nFiltersIcon"
                    android:layout_width="1dp"
                    android:layout_marginEnd="12dp"
                    android:background="@color/deviderColor"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:id="@+id/nSearchIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/search_left"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="13dp"
                    app:layout_constraintLeft_toLeftOf="parent"
            />


            <EditText
                    android:id="@+id/nSearchText"
                    android:imeOptions="actionGo"
                    android:layout_marginEnd="5dp"
                    android:textSize="14sp"
                    android:hint="@string/search"
                    android:layout_width="0dp"
                    android:textColor="@color/titleTextColor"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/nSearchIcon"
                    android:layout_marginStart="9dp"
                    app:layout_constraintEnd_toStartOf="@id/nDevider"
            />


        </android.support.constraint.ConstraintLayout>

        <TextView
                android:visibility="gone"
                android:id="@+id/nResultSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:textColor="@color/subtitleTextColor"
                android:text="246"
                android:fontFamily="@font/helvetica_neue_bold"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="@id/nResultSearch2"
                app:layout_constraintBottom_toBottomOf="@id/nResultSearch2"
        />
        <TextView
                android:visibility="gone"
                android:id="@+id/nResultSearch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/helvetica_neue_medium"
                tools:ignore="MissingConstraints"
                android:textColor="@color/subtitleTextColor"
                android:text="@string/result_search"
                android:layout_marginStart="5dp"
                app:layout_constraintLeft_toRightOf="@id/nResultSearch"
                app:layout_constraintTop_toBottomOf="@id/nSearchBar"

        />

        <android.support.v7.widget.RecyclerView
                android:id="@+id/nRecylerViewUpComing"
                app:layout_constraintTop_toBottomOf="@id/nResultSearch"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="?attr/actionBarSize"
                >

        </android.support.v7.widget.RecyclerView>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/nAddMovie"
                android:layout_width="70dp"
                android:layout_height="53dp"
                tools:ignore="MissingConstraints"
                android:background="@drawable/rectangle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
        >
            <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="12dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="19dp"
                    android:src="@drawable/ic_plus"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    tools:ignore="MissingConstraints"/>
        </android.support.constraint.ConstraintLayout>




    </android.support.constraint.ConstraintLayout>

</layout>

